        Reviewed by Darin Adler.

https://bugs.webkit.org/show_bug.cgi?id=33972
        Assertion failure in FrameLoader::checkLoadComplete()

        I couldn't make a test for this, after trying rather hard. I'm not too worried, because such
        a test has to depend on details of current implementation so intimately that it would become
        ineffective very quickly anyway.

        * loader/FrameLoader.cpp: (WebCore::FrameLoader::stopAllLoaders): Stop the check timer, we
        don't need it after aborting load.



Canonical link: https://commits.webkit.org/45054@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@53655 268f45cc-cd09-0410-ab3c-d52691b4dbfc